# xbat

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  LICENSE-THIRD-PARTY.md  README.md  build-container.sh  docker-compose.override.yml  docker-compose.yml  setup.sh
.github/workflows/: build.yml  install.yml  main.yml  vm-test.yml
conf/: mongod.conf  nginx.conf.in  pgbouncer.ini.in  questdb-log.conf  questdb.conf  valkey.conf  xbat.conf  xbatd.conf
dev/: .env  docker-compose.yml  ldap.md  ldap_setup.sh
dev/certs/: cert.pem  key.pem
docker/: backend.dockerfile  mongodb.dockerfile  nginx.dockerfile  ui.dockerfile  xbatctld.dockerfile
docs/: app.vue  bun.lockb  content.config.ts  helper.ts  nuxt.config.ts  package-lock.json  package.json
docs/components/: DocsNavigation.vue  Search.vue  TOC.vue  TopBar.vue
docs/layouts/: default.vue  docs.vue
scripts/: clickhouse-setup.sh  conf-to-env.sh  create-xbatd-conf.sh  docker-env.sh  epilog.sh  migrate-v2.sh  nginx-entrypoint.sh  pgbouncer-setup.sh  pipe-setup.sh  pipe-teardown.sh  pipe.sh  prolog.sh  validate-config.sh
services/: xbat-questdb-native.service.in  xbat-questdb-podman.service  xbat.service
src/: pyproject.toml  setup.py
src/backend/: config-dev.py  config-prod.py  requirements.txt
src/backend/restapi/: __init__.py  access_control.py  backup.py  grpc_client.py  metrics.json  mod_oauth.py  user_helper.py  valkey.py
src/backend/restapi/api/: benchmarks.py  configuration_backups.py  configuration_folders.py  configurations.py  jobs.py  measurements.py  nodes.py  openapi.yml  projects.py  settings.py  slurm.py  users.py
src/backend/restapi/auth/: ipa.py  ldap.py  models.py  oauth_routes.py
src/backend/restapi/templates/: base.html  client_authorize.html  home.html
src/backend/restapi/templates/error/: 404.html
src/backend/restapi/utils/: configuration_backup.py  configurations.py  folders.py  ids.py  users.py
src/backend/utils/: backup.py  questdb_clickhouse_migration.py
src/cli/: .env.example  .gitignore  README.md  build-standalone.py  pyproject.toml
src/cli/src/xbat/: __main__.py  api.py  cli.py  plot.py
src/shared/: auth.py  braceNotation.py  clickhouse.py  configuration.py  date.py  exc.py  exceptionHandler.py  files.py  helpers.py  httpErrors.py  jsonProvider.py  logging.conf  mongodb.py  questdb.py  size.py
src/shared/grpc/: xbat.proto
src/ui/: app.vue  bun.lockb  ecosystem.config.cjs  error.vue  nuxt.config.ts  package-lock.json  package.json  server.mjs  tsconfig.json
src/ui/assets/css/: colors.scss  editor-themes.scss  general.scss  rainbow-colors.scss
src/ui/components/: BenchmarkComparison.vue  BenchmarkSidebar.vue  CompareTextField.vue  Editor.client.vue  HoverMenu.vue  InfoColumn.vue  InlineEdit.vue  JobOverviewTable.vue  JobVariableOverview.vue  JobVariableOverviewTable.vue  JobVariables.vue  MultiPageMenu.vue  OverviewActions.vue  Snackbar.vue  Submission.vue  Tooltip.vue  TopNav.vue
src/ui/components/benchmark/: BenchmarkComparison.vue  BenchmarkOutput.vue  BenchmarkSettings.vue  BenchmarkSidebar.vue
src/ui/components/configuration/: ConfigurationEditor.vue  ConfigurationSidebar.vue  FolderBrowser.vue  MoveFolderTreeNode.vue
src/ui/components/configuration/browser/: ConfigListItem.vue  FolderBrowserDialogs.vue  FolderBrowserTable.vue  FolderBrowserToolbar.vue  FolderTreeNode.vue  MoveFolderTreeNode.vue
src/ui/components/configuration/sidebar/: SidebarConfigItem.vue  SidebarFolderNode.vue
src/ui/components/graphs/: Graph.vue  GraphExport.vue  GraphGroup.vue  GraphModifiers.vue  GraphStatistics.vue  GraphStyling.vue  GraphTraces.vue  GraphWrapper.vue  ReactiveGraph.client.vue  ReactiveGraphECharts.client.vue  RooflineGraph.vue  useGraphBase.ts  useGraphForm.ts  useGraphRooflineForm.ts
src/ui/composables/: useBenchmarks.js  useChartHover.ts  useConfigurationEditor.ts  useConfigurationFolder.ts  useConstrainedEditor.ts  useFolderBrowser.ts  useFormValidation.js  useGraph.ts  useGraphRoofline.ts  useJob.ts  useJobs.js  useNodeBenchmarks.js  useNodes.js  usePower.ts  usePreferences.ts  useSidebarInfo.ts  useValidators.js
src/ui/layouts/: default.vue
src/ui/middleware/: auth.global.ts
src/ui/pages/: configurations.vue  index.vue  login.vue  logout.vue  projects.vue  users.vue
src/ui/pages/benchmarks/: [id].vue
src/ui/plugins/: 01.pinia.ts  02.api.ts  snackbar.ts  vue-monaco-editor.client.ts  vuetify.ts
src/ui/repository/: factory.ts
src/ui/repository/modules/: benchmarks.ts  configurationBackups.ts  configurationFolders.ts  configurations.ts  jobs.ts  measurements.ts  metrics.ts  nodes.ts  projects.ts  settings.ts  slurm.ts  users.ts
src/ui/store/: auth.ts  graph.ts  index.ts  snackbar.ts
src/ui/types/: graph.ts
src/ui/utils/: array.ts  braceNotation.js  colors.ts  conversion.ts  date.ts  misc.ts  object.ts  string.ts
src/xbatctld/: __init__.py  grpc_server.py  paths.py  pipe.py  processing.py  registration.py  requirements.txt  slurm.py  submission.py  users.py
src/xbatctld/inputs/: jobscript.sh.in  userJobscript.sh.in
src/xbatctld/testdata/: scontrol show job  sinfo --json v22  sinfo --json v23  sinfo --json v24  squeue --json v22  squeue --json v23  squeue --json v24
src/xbatd/: CMakeLists.txt  Makefile  build.sh  exampleConfig.json  metrics.json  pci_devices.sh  xbatd.el10.dockerfile  xbatd.el8.dockerfile  xbatd.el9.dockerfile  xbatd.service  xbatd.spec
src/xbatd/src/: CAMDGPU.cpp  CAMDGPU.hpp  CCpuStat.cpp  CCpuStat.hpp  CDataCollectionBase.cpp  CDataCollectionBase.hpp  CEnergyIpmi.cpp  CEnergyIpmi.hpp  CIOStat.cpp  CIOStat.hpp  CInterconnectEthernet.cpp  CInterconnectEthernet.hpp  CInterconnectInfiniband.cpp  CInterconnectInfiniband.hpp  CLikwidPerfctr.cpp  CLikwidPerfctr.hpp  CLogging.cpp  CLogging.hpp  CMemUsage.cpp  CMemUsage.hpp  CNvidiaGPU.cpp  CNvidiaGPU.hpp  CQueue.hpp  CXilinx.cpp  CXilinx.hpp  ClickHouseWriter.cpp  ClickHouseWriter.hpp  CurlClient.cpp  CurlClient.hpp  definitions.hpp  helper.cpp  helper.hpp  main.cpp  main.hpp  statusinfo.hpp  threadhelper.cpp  threadhelper.hpp  topology.cpp  topology.hpp
(+67 files in other folders)
