[project]
name = "xbat"
version = "2.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "grpcio==1.75.1",
    "grpcio-tools==1.75.1",
]

[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "grpcio-tools==1.75.1",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
backend = [
    "Flask[async]==3.1.3",
    "Flask-Cors==6.0.2",
    "markupsafe==3.0.3",
    "connexion[flask]==3.3.0",
    "swagger-ui-bundle==1.1.0",
    "pymongo==4.13.2",
    "wheel==0.46.3",
    "gunicorn==23.0.0",
    "Authlib==1.6.12",
    "blueprint==3.4.2",
    "python-freeipa==1.0.8",
    "pyyaml==6.0.3",
    "six==1.17.0",
    "python-pam==2.0.2",
    "numpy==2.3.5",
    "psycopg[binary]==3.2.13",
    "python-ldap==3.4.5",
    "uvicorn==0.38.0",
    "redis==5.3.1",
    "filelock==3.20.3",
    "bcrypt==5.0.0",
]

xbatctld = [
    "pymongo==4.13.2",
    "wheel==0.46.3",
    "chardet==5.2.0",
    "filelock==3.20.3",
    "psycopg[binary]==3.2.13",
    "numpy==2.3.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "backend*",
    "shared*",
    "xbatctld*",
]