[project]
name = "xbat-cli"
version = "0.1.0"
description = "xbat command line interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fabric>=3.2.2",
    "keyring>=25.6.0",
    "pandas>=2.3.3",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "scienceplots>=2.2.0",
    "tornado>=6.5.4",
    "typer>=0.20.0",
]

[project.scripts]
xbat = "xbat.__main__:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "nuitka>=2.8.4",
    "pandas-stubs>=2.3.2.250926",
    "types-requests>=2.32.4.20250913",
]
